{
    "version": 1,
    "name": "MenuInputActions",
    "maps": [
        {
            "name": "UI_Controls",
            "id": "489f7839-c308-4ff8-8e1b-8eaee4d951b2",
            "actions": [
                {
                    "name": "Open_Menu",
                    "type": "Button",
                    "id": "74c01857-f1a7-4197-869d-a6d7e0cc8731",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectSlot_1",
                    "type": "Button",
                    "id": "ecd475a5-7352-450f-bb3e-10043d6d92df",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectSlot_2",
                    "type": "Button",
                    "id": "7b3f363b-4cd1-4d44-ad0b-08ae0420ab1e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectSlot_3",
                    "type": "Button",
                    "id": "22d9ecd0-3178-4ce7-9dc7-d6f312225be0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectSlot_4",
                    "type": "Button",
                    "id": "1d1af1f9-ad2a-4f87-8c7f-023ff15cb421",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectSlot_5",
                    "type": "Button",
                    "id": "66a5e240-bdb6-4985-98db-8e0515846e65",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectSlot_6",
                    "type": "Button",
                    "id": "cbc6ecd7-26b2-49df-bb05-5e9c363227de",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectSlot_7",
                    "type": "Button",
                    "id": "14e5c408-cfaa-48d1-a5bd-84b4e024193a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectSlot_8",
                    "type": "Button",
                    "id": "528dadb0-0e12-4345-b311-ea685f4dd051",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectSlot_9",
                    "type": "Button",
                    "id": "4fdef348-f733-4bac-8ca2-fc49ea290898",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b912903d-cfa9-4ed3-b229-23ccd751e7ad",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Open_Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7bc348a5-2ed2-42e7-b1b7-0860e60059fb",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSlot_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ebfbdec-4eca-4677-bd76-1f9e1a1ed9d9",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSlot_2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dda5befd-11f4-4637-95f9-2b3e13e74fe4",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSlot_3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7b4115a2-4ce8-449b-9163-6a342eb9af17",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSlot_4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c1a856d7-c45e-454d-b9d1-923fdfc24b16",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSlot_5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "202f08c8-3abb-40cd-befc-54ebf4851a54",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSlot_6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c92f1450-f893-4c0c-9fb6-17a8745cbe84",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSlot_7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c02eae65-4c62-4f05-9104-d872ec1a505c",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSlot_8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed3de045-c2f5-4376-9905-243c64e925d9",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSlot_9",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}